--- a/frontend/src/views/Landing/components/LandingHeader/components/Account/Account.module.css
+++ b/frontend/src/views/Landing/components/LandingHeader/components/Account/Account.module.css
@@ -2,7 +2,7 @@
   color: var(--white);
   font-family: Montserrat;
   font-size: 0.75rem;
-  font-weight: bold;
+  font-weight: 600;
 }
 
 .loaderContainer {
