--- a/frontend/src/views/Project/components/ProjectHeader/ProjectHeader.module.css
+++ b/frontend/src/views/Project/components/ProjectHeader/ProjectHeader.module.css
@@ -56,7 +56,7 @@
   margin-bottom: 0;
   padding-top: 0.875rem;
   padding-bottom: 0.875rem;
-  font-weight: bold;
+  font-weight: 600;
   user-select: none;
   width: 13.125rem;
   white-space: nowrap;
